{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 23,
  "lineage": "aa3c03ff-4a4c-5283-fb43-67bd91169b62",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:security-group/sg-0c2b94f40cedb4d61",
            "description": "Security group for RDS",
            "filter": null,
            "id": "sg-0c2b94f40cedb4d61",
            "name": "tyriantrade-rds-sg",
            "tags": {
              "Environment": "starter",
              "ManagedBy": "Terraform",
              "Name": "tyriantrade-rds-sg",
              "Project": "tyriantrade"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:subnet/subnet-0929ee7b91593a2ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0929ee7b91593a2ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506675684508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "starter",
              "ManagedBy": "Terraform",
              "Name": "tyriantrade-private-2",
              "Project": "tyriantrade"
            },
            "vpc_id": "vpc-00ce71b940a79b54a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:vpc/vpc-00ce71b940a79b54a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04594c62a8192f35f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-010feb40f342548ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ce71b940a79b54a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c1e20b682931a22",
            "owner_id": "506675684508",
            "tags": {
              "Environment": "starter",
              "ManagedBy": "Terraform",
              "Name": "tyriantrade-vpc",
              "Project": "tyriantrade"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:506675684508:instance/i-0ff382663dcacb45d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tyriantrade-bastion-profile",
            "id": "i-0ff382663dcacb45d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efc4e9936d8a761e",
            "private_dns": "ip-10-0-12-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb53110fb0693ab1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0929ee7b91593a2ea",
            "tags": {
              "Name": "tyriantrade-bastion"
            },
            "tags_all": {
              "Name": "tyriantrade-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e73f2fb21184c7e7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion",
            "aws_security_group.vpc_endpoints",
            "aws_vpc_endpoint.ec2messages",
            "aws_vpc_endpoint.ssm",
            "aws_vpc_endpoint.ssmmessages",
            "data.aws_security_group.rds",
            "data.aws_ssm_parameter.amazon_linux_2023",
            "data.aws_subnet.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:security-group/sg-0e73f2fb21184c7e7",
            "description": "Security group for SSM bastion",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2b94f40cedb4d61"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0e73f2fb21184c7e7",
            "ingress": [],
            "name": "tyriantrade-bastion-sg",
            "name_prefix": "",
            "owner_id": "506675684508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tyriantrade-bastion-sg"
            },
            "tags_all": {
              "Name": "tyriantrade-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.rds",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:security-group/sg-0bbe241ec44e4f249",
            "description": "Security group for VPC endpoints (SSM, EC2Messages, SSMMessages)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbe241ec44e4f249",
            "ingress": [],
            "name": "tyriantrade-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "506675684508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tyriantrade-vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "tyriantrade-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPS to VPC Endpoints for SSM",
            "from_port": 443,
            "id": "sgrule-3467572226",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e73f2fb21184c7e7",
            "security_group_rule_id": "sgr-07091e5ccb3d40e34",
            "self": false,
            "source_security_group_id": "sg-0bbe241ec44e4f249",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.vpc_endpoints",
            "data.aws_security_group.rds",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL from bastion",
            "from_port": 5432,
            "id": "sgrule-1602083888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c2b94f40cedb4d61",
            "security_group_rule_id": "sgr-08d9235722efcd83c",
            "self": false,
            "source_security_group_id": "sg-0e73f2fb21184c7e7",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "data.aws_security_group.rds",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_endpoints_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTPS from bastion for SSM communication",
            "from_port": 443,
            "id": "sgrule-1959982658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bbe241ec44e4f249",
            "security_group_rule_id": "sgr-0df9da8bacd3050b0",
            "self": false,
            "source_security_group_id": "sg-0e73f2fb21184c7e7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.vpc_endpoints",
            "data.aws_security_group.rds",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:vpc-endpoint/vpce-05155bb2b4e9d4642",
            "dns_entry": [
              {
                "dns_name": "vpce-05155bb2b4e9d4642-uzgk4cy6.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05155bb2b4e9d4642-uzgk4cy6-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z104235831S8VSX4RW3KW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05155bb2b4e9d4642",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ce4cbf460121c3a7"
            ],
            "owner_id": "506675684508",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bbe241ec44e4f249"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.12.154",
                "subnet_id": "subnet-0929ee7b91593a2ea"
              }
            ],
            "subnet_ids": [
              "subnet-0929ee7b91593a2ea"
            ],
            "tags": {
              "Name": "tyriantrade-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "tyriantrade-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnet.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:vpc-endpoint/vpce-01e983020f6de1943",
            "dns_entry": [
              {
                "dns_name": "vpce-01e983020f6de1943-qlqvaaph.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01e983020f6de1943-qlqvaaph-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0304272BJ9X7XOUVWV"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z01731862GBY52CV3AGZD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01e983020f6de1943",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02194ab7d793565bc"
            ],
            "owner_id": "506675684508",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bbe241ec44e4f249"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.12.109",
                "subnet_id": "subnet-0929ee7b91593a2ea"
              }
            ],
            "subnet_ids": [
              "subnet-0929ee7b91593a2ea"
            ],
            "tags": {
              "Name": "tyriantrade-ssm-endpoint"
            },
            "tags_all": {
              "Name": "tyriantrade-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnet.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506675684508:vpc-endpoint/vpce-017866714f5e33794",
            "dns_entry": [
              {
                "dns_name": "vpce-017866714f5e33794-7i4si77v.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-017866714f5e33794-7i4si77v-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10430633K445LB8PIM23"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0304494ZRPARNZA7H9J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-017866714f5e33794",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d21645510e0ca023"
            ],
            "owner_id": "506675684508",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bbe241ec44e4f249"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.12.173",
                "subnet_id": "subnet-0929ee7b91593a2ea"
              }
            ],
            "subnet_ids": [
              "subnet-0929ee7b91593a2ea"
            ],
            "tags": {
              "Name": "tyriantrade-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "tyriantrade-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00ce71b940a79b54a"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnet.private",
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}